force-app/main/default/objects/ssot__CarePlan__dlm/fields/ssot__AuthorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorId__c</fullName>
    <label>Author</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>