force-app/main/default/objects/ssot__CarePlan__dlm/fields/ssot__AuthorizationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorizationType__c</fullName>
    <label>Authorization Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorizationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>