force-app/main/default/objects/ssot__CarePlan__dlm/fields/ssot__CarePlan_AuthorId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CarePlan_AuthorId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlan_AuthorId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>CarePlan_AuthorId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>CarePlan_AuthorId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>