force-app/main/default/objects/ssot__CarePlan__dlm/fields/ssot__rel_1716726631887_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726631887_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlan_CarePlanTemplateId_map_Care_rel</label>
    <referenceTo>ssot__CarePlanTemplate__dlm</referenceTo>
    <relationshipLabel>CarePlan_CarePlanTemplateId_map_Care_rel</relationshipLabel>
    <relationshipName>rel_1716726631887_end</relationshipName>
    <type>Lookup</type>
</CustomField>