force-app/main/default/objects/ssot__CarePlan__dlm/fields/ssot__rel_1734838212218_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838212218_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlan_AuthorId_map_PatientRegiste_rel</label>
    <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
    <relationshipLabel>CarePlan_AuthorId_map_PatientRegiste_rel</relationshipLabel>
    <relationshipName>rel_1734838212218_end</relationshipName>
    <type>Lookup</type>
</CustomField>